--- a/Database/app/src/main/res/layout/activity_drug__by__class.xml
+++ b/Database/app/src/main/res/layout/activity_drug__by__class.xml
@@ -6,16 +6,22 @@
     android:layout_height="match_parent"
     tools:context="com.example.shakkhor.database.Drug_By_Class">
 
+    <include
+        android:id="@+id/app_bar"
+        layout="@layout/app_bar">
+
+    </include>
+
     <ListView
         android:id="@+id/list_class"
-        android:layout_width="368dp"
+        android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="64dp"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
