--- a/Database/app/src/main/res/layout/activity_drug__by__indication.xml
+++ b/Database/app/src/main/res/layout/activity_drug__by__indication.xml
@@ -6,6 +6,12 @@
     android:layout_height="match_parent"
     tools:context="com.example.shakkhor.database.Drug_By_Indication">
 
+    <include
+        android:id="@+id/app_bar"
+        layout="@layout/app_bar">
+
+    </include>
+
     <ListView
         android:id="@+id/list_indication"
         android:layout_width="368dp"
@@ -15,7 +21,7 @@
         android:layout_marginLeft="8dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginTop="8dp"
+        android:layout_marginTop="64dp"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
