--- a/Database/app/src/main/res/layout/activity_favorite__drug.xml
+++ b/Database/app/src/main/res/layout/activity_favorite__drug.xml
@@ -6,6 +6,12 @@
     android:layout_height="match_parent"
     tools:context="com.example.shakkhor.database.Favorite_Drug">
 
+    <include
+        android:id="@+id/app_bar"
+        layout="@layout/app_bar">
+
+    </include>
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
