--- a/Database/app/src/main/res/layout/activity_drug__by__class.xml
+++ b/Database/app/src/main/res/layout/activity_drug__by__class.xml
@@ -8,13 +8,17 @@
 
     <include
         android:id="@+id/app_bar"
-        layout="@layout/app_bar">
+        layout="@layout/app_bar"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent"
+        tools:layout_editor_absoluteY="0dp"
+        tools:layout_editor_absoluteX="0dp">
 
     </include>
 
     <ListView
         android:id="@+id/list_class"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
@@ -25,6 +29,8 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
-        app:layout_constraintVertical_bias="1.0"></ListView>
+        app:layout_constraintVertical_bias="1.0"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"></ListView>
 
 </android.support.constraint.ConstraintLayout>
