--- a/Database/app/src/main/res/layout/activity_drug__by__class.xml
+++ b/Database/app/src/main/res/layout/activity_drug__by__class.xml
@@ -31,6 +31,10 @@
         android:layout_marginBottom="8dp"
         app:layout_constraintVertical_bias="1.0"
         android:layout_marginStart="8dp"
-        android:layout_marginEnd="8dp"></ListView>
+        android:layout_marginEnd="8dp"
+        android:divider="@android:color/white"
+        android:dividerHeight="1dp">
+
+    </ListView>
 
 </android.support.constraint.ConstraintLayout>
