--- a/Database/app/src/main/res/layout/activity_drug__by__indication.xml
+++ b/Database/app/src/main/res/layout/activity_drug__by__indication.xml
@@ -8,13 +8,15 @@
 
     <include
         android:id="@+id/app_bar"
-        layout="@layout/app_bar">
+        layout="@layout/app_bar"
+        android:layout_height="wrap_content"
+        android:layout_width="match_parent">
 
     </include>
 
     <ListView
         android:id="@+id/list_indication"
-        android:layout_width="368dp"
+        android:layout_width="0dp"
         android:layout_height="0dp"
         android:layout_marginRight="8dp"
         app:layout_constraintRight_toRightOf="parent"
@@ -25,6 +27,12 @@
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintBottom_toBottomOf="parent"
         android:layout_marginBottom="8dp"
-        app:layout_constraintVertical_bias="1.0"></ListView>
+        app:layout_constraintVertical_bias="1.0"
+        android:divider="@android:color/white"
+        android:dividerHeight="1dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp">
+
+    </ListView>
 
 </android.support.constraint.ConstraintLayout>
